# SynapseKit

./: .all-contributorsrc  CHANGELOG.md  DISCORD_COMMANDS.md  README.md  pyproject.toml  smoke_test.py
.github/: FUNDING.yml
.github/profile/: README.md
.github/workflows/: discord-issues.yml  discord-notify.yml  init-wiki.yml
docs/: FEATURE_PARITY.md  ROADMAP.md
examples/: README.md  agent_memory.py  agent_tools.py  caching_retries.py  fine_tune_flywheel.py  graph_workflow.py  multi_provider.py  multimodal_rag.py
src/synapsekit/: __init__.py  _api.py
src/synapsekit/a2a/: __init__.py  agent_card.py  client.py  server.py  types.py
src/synapsekit/agents/: __init__.py  base.py  (+5 more)
synapsekit/: __init__.py
tests/: test_agent_executor.py  test_agent_memory.py  test_function_calling_agent.py  test_graph_build.py  test_graph_mermaid.py  test_graph_run.py  test_graph_state.py  test_graph_stream.py  test_llm_providers.py  test_loaders.py  test_parsers.py  test_prompts.py  test_rag_facade.py  test_rag_pipeline.py  test_react_agent.py  test_tools.py  test_v051_features.py  test_v060_features.py  test_v062_features.py  test_v065_features.py  test_v066_features.py  test_v068_features.py  test_v069_features.py  test_v070_features.py  test_v090_features.py  test_v100_features.py  test_v120_features.py  test_v150_finetune_flywheel.py  test_vectorstore_backends.py
tests/agents/: test_aws_lambda_tool.py  test_browser_prod.py  test_executor.py  test_function_calling.py  test_memory.py  test_news_tool.py  test_react.py  test_tools.py  test_tools_behavioral.py  test_weather_tool.py  test_web_scraper.py
tests/api/: test_mcp_server.py  test_serve_endpoints.py
tests/behavioral/: test_memory_behavior.py  test_pipeline_behavior.py  test_tracer_behavior.py
tests/e2e/: test_agent_e2e.py  test_graph_e2e.py  test_rag_e2e.py
tests/evaluation/: test_metrics_behavioral.py
tests/graph/: test_checkpointing.py  test_cycles.py  test_mermaid.py  test_node.py  test_recursive_subgraph.py  test_visualization.py
tests/llm/: test_cache_behavioral.py  test_cache_memcached.py  test_function_calling_providers.py  test_gpt4all.py  test_llm_behavioral.py  test_lmstudio.py  test_novita.py  test_providers.py  test_sambanova_provider.py  test_vertex_ai.py  test_vllm.py  test_writer.py
tests/loaders/: test_airtable_loader.py  test_arxiv_loader.py  test_audio_video_loaders.py  test_audio_video_prod.py  test_azure_blob_loader.py  test_bigquery_loader.py  test_config_loader.py  test_discord_loader.py  test_dropbox_loader.py  test_dynamodb_loader.py  test_elasticsearch_loader.py  test_epub_loader.py  test_git_loader.py  test_google_sheets.py  test_hubspot_loader.py  test_jira_loader.py  test_latex_loader.py  test_mongodb_loader.py  test_obsidian_loader.py  test_onedrive_loader.py  test_parquet_loader.py  test_redis_loader.py  test_rss.py  test_rtf_loader.py  test_s3_loader.py  test_salesforce_loader.py  test_sitemap_loader.py  test_slack_loader.py  test_supabase_loader.py  test_tsv_loader.py  test_xml_loader.py  test_yaml_loader.py  test_youtube_loader.py
tests/mcp/: test_server.py
tests/memory/: test_agent_memory_backend_guards.py  test_agent_memory_core.py  test_agent_memory_prod.py  test_agent_memory_sqlite_backend.py  test_redis_memory.py
tests/preflight/: test_preflight.py
tests/rag/: test_facade.py  test_pipeline.py
tests/retrieval/: test_backends.py  test_graphrag.py  test_sqlite_vec.py
tests/text_splitters/: test_html.py  test_json_splitter.py  test_markdown.py  test_splitters.py
tests/tools/: test_browser_tool.py
(+115 files in other folders)
