[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "synapsekit"
version = "0.3.0"
description = "Lightweight, async-first RAG framework. Streaming-native, minimal dependencies."
authors = ["Amit Nautiyal <de.amit.nautiyal@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SynapseKit/SynapseKit"
repository = "https://github.com/SynapseKit/SynapseKit"
keywords = ["rag", "llm", "ai", "async", "streaming", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "synapsekit"}]

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
numpy = ">=1.26"
rank-bm25 = ">=0.2.2"

[tool.poetry.extras]
openai = ["openai"]
anthropic = ["anthropic"]
semantic = ["sentence-transformers"]
pdf = ["pypdf"]
html = ["beautifulsoup4", "lxml"]
web = ["httpx", "beautifulsoup4"]
chroma = ["chromadb"]
faiss = ["faiss-cpu"]
qdrant = ["qdrant-client"]
pinecone = ["pinecone"]
ollama = ["ollama"]
cohere = ["cohere"]
mistral = ["mistralai"]
gemini = ["google-generativeai"]
bedrock = ["boto3"]
search = ["duckduckgo-search"]
all = ["openai", "anthropic", "sentence-transformers", "pypdf", "beautifulsoup4", "lxml", "httpx", "chromadb", "ollama", "cohere", "mistralai", "google-generativeai", "boto3", "duckduckgo-search"]

[tool.poetry.group.openai]
optional = true

[tool.poetry.group.openai.dependencies]
openai = ">=1.0"

[tool.poetry.group.anthropic]
optional = true

[tool.poetry.group.anthropic.dependencies]
anthropic = ">=0.25"

[tool.poetry.group.semantic]
optional = true

[tool.poetry.group.semantic.dependencies]
sentence-transformers = ">=2.7"

[tool.poetry.group.pdf]
optional = true

[tool.poetry.group.pdf.dependencies]
pypdf = ">=4.0"

[tool.poetry.group.html]
optional = true

[tool.poetry.group.html.dependencies]
beautifulsoup4 = ">=4.12"
lxml = ">=5.0"

[tool.poetry.group.web]
optional = true

[tool.poetry.group.web.dependencies]
httpx = ">=0.27"
beautifulsoup4 = ">=4.12"

[tool.poetry.group.chroma]
optional = true

[tool.poetry.group.chroma.dependencies]
chromadb = ">=0.5"

[tool.poetry.group.faiss]
optional = true

[tool.poetry.group.faiss.dependencies]
faiss-cpu = ">=1.7"

[tool.poetry.group.qdrant]
optional = true

[tool.poetry.group.qdrant.dependencies]
qdrant-client = ">=1.9"

[tool.poetry.group.pinecone]
optional = true

[tool.poetry.group.pinecone.dependencies]
pinecone = ">=3.0"

[tool.poetry.group.ollama]
optional = true

[tool.poetry.group.ollama.dependencies]
ollama = ">=0.2"

[tool.poetry.group.cohere]
optional = true

[tool.poetry.group.cohere.dependencies]
cohere = ">=5.0"

[tool.poetry.group.mistral]
optional = true

[tool.poetry.group.mistral.dependencies]
mistralai = ">=1.0"

[tool.poetry.group.gemini]
optional = true

[tool.poetry.group.gemini.dependencies]
google-generativeai = ">=0.7"

[tool.poetry.group.bedrock]
optional = true

[tool.poetry.group.bedrock.dependencies]
boto3 = ">=1.34"

[tool.poetry.group.search]
optional = true

[tool.poetry.group.search.dependencies]
duckduckgo-search = ">=6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
